D9-ArgoCD-Kustomize-adv-deployment/Lab4-argocd-auto-add-nginx-demo/repo/nginx-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gitops-nginx
  namespace: gitops-demo

spec:

  ingressClassName: nginx

  rules:

  - host: gitops-student-XX.lab.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: gitops-nginx

            port:

              number: 80
